--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,1 +1,17 @@
 /* button */
+.button {
+  font-size: 16px;
+  font-family: $second-font;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.button--main {
+  color: $basic-white;
+  background-color: $basic-green;
+}
+
+.button--second {
+  color: $special-dark-grey;
+  background-color: $basic-grey;
+}
