--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,23 @@
 /* здесь используйте глобальные переменные */
+
+$primary-font: "Lato", sans-serif;
+$second-font: "Oswald", sans-serif;
+
+// Colors
+
+$basic-white: #ffffff;
+$basic-green: #68b738;
+$basic-grey: #f2f2f2;
+$special-grey-2: #ebebeb;
+$special-grey: #cdcdcd;
+$special-grey-2: #666666;
+$special-dark-grey: #444444;
+$special-dark-grey-2: #222222;
+$status-error: #ff8282;
+$basic-green-2: #5eaa2f;
+
+// Viewports
+
+$tablet-width: 768px;
+$desktop-width: 1200px;
+$mobile-width-only: 767px;
