Создает базовую стилизацию

--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -4,14 +4,19 @@
   font-family: $second-font;
   line-height: 20px;
   text-transform: uppercase;
+  text-decoration: none;
 }
 
 .button--main {
-  color: $basic-white;
-  background-color: $basic-green;
+  color: $basic-color;
+  background-color: $basic-bg-color;
 }
 
 .button--second {
-  color: $special-dark-grey;
-  background-color: $basic-grey;
+  color: $special-dark-secondary-contrast-color;
+  background-color: $secondary-contrast-color;
+}
+
+.button--to-look {
+  color: $contrast-color;
 }
