--- a/source/styles/blocks/copyright.scss
+++ b/source/styles/blocks/copyright.scss
@@ -1,1 +1,7 @@
 /* copyright */
+.copyright__text {
+  font-family: $primary-font;
+  font-size: 16px;
+  line-height: 20px;
+  color: $special-dark-secondary-contrast-color;
+}
