--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -1,1 +1,12 @@
 /* how-it-works */
+
+.how-it-works__title {
+  font-family: $second-font;
+  font-size: 36px;
+  line-height: 40px;
+  font-weight: 400;
+}
+
+.how-it-works__list {
+  list-style-type: none;
+}
