--- a/source/styles/blocks/main-banner.scss
+++ b/source/styles/blocks/main-banner.scss
@@ -1,1 +1,21 @@
 /* main-banner */
+
+.main-banner {
+  background-color: $basic-bg-color;
+}
+
+.main-banner__title {
+  font-size: 36px;
+  font-family: $second-font;
+  line-height: 36px;
+  font-weight: 400;
+  color: $basic-color;
+}
+
+.main-banner__text {
+  font-size: 14px;
+  font-family: $second-font;
+  line-height: 14px;
+  color: $basic-color;
+  text-transform: uppercase;
+}
