--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -1,1 +1,18 @@
 /* programs */
+
+.programs__list {
+  list-style-type: none;
+}
+
+.programs__item {
+  background-color: $secondary-contrast-color;
+}
+
+.programs__item-title {
+  font-family: $second-font;
+  font-size: 24px;
+  line-height: 37px;
+  font-weight: 400;
+  color: $contrast-color;
+  text-transform: uppercase;
+}
