--- a/source/styles/blocks/second-catalog.scss
+++ b/source/styles/blocks/second-catalog.scss
@@ -1,1 +1,12 @@
 /* second-catalog */
+.second-catalog__title {
+  font-family: $second-font;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  color: $contrast-color;
+}
+
+.second-catalog__list {
+  list-style-type: none;
+}
