--- a/source/styles/blocks/subscribe-form.scss
+++ b/source/styles/blocks/subscribe-form.scss
@@ -1,1 +1,9 @@
 /* subscribe-form */
+.subscribe-form__email {
+  font-size: 20px;
+  font-family: $second-font;
+  line-height: auto;
+  font-weight: 400;
+  color: $special-dark-secondary-contrast-color;
+  text-transform: uppercase;
+}
