--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -5,16 +5,14 @@ $second-font: "Oswald", sans-serif;
 
 // Colors
 
-$basic-white: #ffffff;
-$basic-green: #68b738;
-$basic-grey: #f2f2f2;
-$special-grey-2: #ebebeb;
-$special-grey: #cdcdcd;
-$special-grey-2: #666666;
-$special-dark-grey: #444444;
-$special-dark-grey-2: #222222;
-$status-error: #ff8282;
-$basic-green-2: #5eaa2f;
+$basic-color: #ffffff;
+$contrast-color: #000000;
+$special-contrast-color: #111111;
+$basic-bg-color: #68b738;
+$secondary-contrast-color: #f2f2f2;
+$special-secondary-contrast-color: #eaeaea;
+$special-dark-secondary-contrast-color: #444444;
+$special-dark-third-contrast-color: #222222;
 
 // Viewports
 
