--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -8,6 +8,7 @@
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/page.scss";
 @import "./blocks/button.scss";
+@import "./blocks/indicator.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/main-nav.scss";
@@ -21,6 +22,7 @@
 @import "./blocks/catalog-card.scss";
 @import "./blocks/second-catalog.scss";
 @import "./blocks/second-catalog-card.scss";
+@import "./blocks/gift-banner.scss";
 @import "./blocks/promotions.scss";
 @import "./blocks/subscribe-form.scss";
 @import "./blocks/main-footer.scss";
