Исправляет замечания, добавляет фон баннера

--- a/source/styles/blocks/catalog-card.scss
+++ b/source/styles/blocks/catalog-card.scss
@@ -9,6 +9,7 @@
   font-family: $second-font;
   line-height: 20px;
   font-weight: 400;
+  color: $special-contrast-color;
   text-transform: uppercase;
 }
 
