--- a/source/styles/blocks/subscribe-form.scss
+++ b/source/styles/blocks/subscribe-form.scss
@@ -2,7 +2,7 @@
 .subscribe-form__email {
   font-size: 20px;
   font-family: $second-font;
-  line-height: auto;
+  line-height: 30px;
   font-weight: 400;
   color: $special-dark-secondary-contrast-color;
   text-transform: uppercase;
