--- a/source/styles/blocks/main-banner.scss
+++ b/source/styles/blocks/main-banner.scss
@@ -1,7 +1,11 @@
 /* main-banner */
 
 .main-banner {
-  background-color: $basic-bg-color;
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85) 63%, #ffffff 37%), url("../../images/banner-background-cat-mobile@1x.jpg"), linear-gradient(#4f4e54, #434248);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 100%, 100% auto, 100%;
+  min-height: 480px;
 }
 
 .main-banner__title {
