--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,7 +1,7 @@
 /* здесь используйте глобальные переменные */
 
-$primary-font: "Lato", sans-serif;
-$second-font: "Oswald", sans-serif;
+$primary-font: "Lato", "Arial", sans-serif;
+$second-font: "Oswald", "Arial", sans-serif;
 
 // Colors
 
