--- a/source/styles/blocks/copyright.scss
+++ b/source/styles/blocks/copyright.scss
@@ -1,6 +1,9 @@
 /* copyright */
 .copyright {
   text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
 
   &::after {
     content: "";
