--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,6 +1,11 @@
 /* social */
 .social__list {
   @include reset-ul;
+  display: flex;
+  gap: 24px;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 .social__link {
