--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -26,7 +26,7 @@
   height: 50px;
   position: absolute;
   top: auto;
-  left: auto;
+  left: 11px;
   background-image: url("../../icons/stack.svg#cat-pro");
   background-repeat: no-repeat;
 }
