--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -9,6 +9,7 @@ $basic-color: #ffffff;
 $contrast-color: #000000;
 $special-contrast-color: #111111;
 $basic-bg-color: #68b738;
+$second-bg-color: #5eaa2f;
 $secondary-contrast-color: #f2f2f2;
 $special-secondary-contrast-color: #eaeaea;
 $special-dark-secondary-contrast-color: #444444;
