--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -31,4 +31,25 @@
     background-image: url("../../icons/stack.svg#icon-arrow");
     background-repeat: no-repeat;
   }
+
+  &::after {
+    content: "";
+    width: 22px;
+    height: 2px;
+    position: absolute;
+    top: 11px;
+    right: -37px;
+    background-color: $contrast-color;
+  }
+
+  &:hover {
+    &::before {
+      right: -47px;
+      transition: 0.5s;
+    }
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
