--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -2,22 +2,42 @@
   position: relative;
 }
 
-.slider__dragme {
+.slider__button {
   height: 100%;
   position: absolute;
   width: 4px;
   top: 0;
-  left: 20px;
+  left: calc(50% - 2px);
+  border: none;
+  border-radius: 2px;
+  padding-inline: 0;
   background-color: $btn-bg-color;
   cursor: pointer;
-  z-index: 300;
 
   &:hover {
     background-color: $basic-bg-color;
+    transition: 1s;
+
+    &::before {
+      border: 2px solid $basic-bg-color;
+      transition: 1s;
+    }
+  }
+
+  &:active {
+    background-color: $second-bg-color;
+    opacity: 0.6;
+    transition: 1s;
+
+    &::before {
+      border: 2px solid rgba(94, 170, 47, 0.6);
+      transition: 1s;
+    }
   }
 }
 
-.slider__dragme-button {
+.slider__button::before {
+  content: "";
   position: absolute;
   top: calc(50% - 20px);
   left: -18px;
@@ -27,30 +47,16 @@
   background-color: $basic-color;
   border: 2px solid $btn-bg-color;
   cursor: pointer;
-  z-index: 300;
-
-  &:hover {
-    border: 2px solid $basic-bg-color;
-  }
-
-  &:hover::before {
-    background-color: $basic-bg-color;
-  }
 }
 
-.slider__dragme:hover .slider__dragme-button {
-  border: 2px solid $basic-bg-color;
-}
-
-.slider__dragme:hover .slider__dragme-button::before {
-  background-color: $basic-bg-color;
-}
-
-.slider__dragme-button::before {
+.slider__button::after {
   content: "";
   width: 24px;
   height: 18px;
   mask-image: url("../../icons/stack.svg#dragme-button");
-  background-color: $btn-bg-color;
+  background-color: inherit;
   display: block;
+  position: absolute;
+  top: calc(50% - 9px);
+  left: -10px;
 }
