Добавляет адаптивную сетку

--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -10,6 +10,8 @@
 .button--main {
   color: $basic-color;
   background-color: $basic-bg-color;
+  text-align: center;
+  border: none;
 }
 
 .button--second {
