--- a/source/styles/blocks/catalog-card.scss
+++ b/source/styles/blocks/catalog-card.scss
@@ -1,5 +1,15 @@
+.catalog-card {
+  border-top: 1px solid $third-border-color;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr min-content;
+}
+
 .catalog-card--to-all {
   text-align: center;
+  border-bottom: 1px solid $third-border-color;
+  display: block;
 
   &::before {
     content: "";
@@ -32,4 +42,15 @@
   line-height: 16px;
   font-weight: 400;
   color: $special-dark-secondary-contrast-color;
+}
+
+.catalog-card__button {
+  grid-column: 1 / -1;
+  padding: 10px;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog-card {
+    border: none;
+  }
 }
