--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,6 +1,10 @@
-/* contacts */
+.contacts--catalog {
+  background-color: #f2f2f2;
+}
+
 .contacts__wrapper {
-  margin: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .contacts__text {
@@ -10,6 +14,7 @@
   font-weight: 400;
   color: $special-contrast-color;
   text-transform: uppercase;
+  margin: 26px 0 26px 20px;
 }
 
 .contacts__address {
@@ -18,4 +23,43 @@
   line-height: 20px;
   font-style: normal;
   color: $special-dark-secondary-contrast-color;
+  margin: 26px 20px 26px 0;
+}
+
+.contacts__address p {
+  margin: 0;
+}
+
+.contacts__map {
+  width: 100%;
+  display: block;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__wrapper {
+    margin: 0 70px 60px;
+  }
+
+  .contacts__text {
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  .contacts__address {
+    text-align: right;
+    font-size: 16px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts {
+    position: relative;
+  }
+
+  .contacts__wrapper {
+    position: absolute;
+    top: 95px;
+    left: 110px;
+    background-color: #ffffff;
+  }
 }
