--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,6 +1,10 @@
-/* example */
 .example {
   background-color: $special-secondary-contrast-color;
+  padding-bottom: 20px;
+}
+
+.example__wrapper {
+  margin: 20px;
 }
 
 .example__title {
@@ -9,10 +13,16 @@
   line-height: 40px;
   font-weight: 400;
   color: $contrast-color;
+  margin: 0;
+  padding-top: 25px;
 }
 
 .example__data-list {
   @include reset-ul;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(124px, 1fr));
+  gap: 32px;
+  margin: 20px 0 34px;
 }
 
 .example__cost {
@@ -22,4 +32,115 @@
   font-weight: 400;
   color: $contrast-color;
   text-transform: uppercase;
+  text-align: center;
+}
+
+.example__slider {
+  width: min(90vh, 90vw);
+  height: min(90vh, 90vw);
+  margin: 20px auto;
+}
+
+@media (min-width: $tablet-width) {
+  .example {
+    background-color: $basic-color;
+    position: relative;
+    padding-bottom: 10px;
+
+    &::before {
+      content: "";
+      background-color: $special-secondary-contrast-color;
+      height: 462px;
+      bottom: 40px;
+      display: block;
+      position: absolute;
+      width: 100%;
+    }
+  }
+
+  .example__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .example__wrapper {
+    padding-bottom: 10px;
+  }
+
+  .example__text {
+    margin: 60px 0 55px;
+  }
+
+  .example__data-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .example__data-list {
+    max-width: 370px;
+  }
+
+  .indicator__name {
+    background-color: $basic-color;
+  }
+
+  .example__cost {
+    font-size: 20px;
+  }
+
+  .example__cost-name {
+    display: block;
+    text-align: right;
+  }
+
+  .example__cost-value {
+    display: block;
+    text-align: right;
+  }
+
+  .example__slider {
+    max-width: 560px;
+    max-height: 512px;
+    margin-top: 99px;
+    margin-bottom: 101px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .example__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+
+  .example__title {
+    grid-column: 1 / 2;
+    display: inline-grid;
+  }
+
+  .example__text {
+    grid-column: 1 / 2;
+    display: inline-grid;
+    z-index: 1;
+    max-width: 436px;
+  }
+
+  .example__data-wrapper {
+    grid-column: 1 / 2;
+    display: grid;
+    grid-template-columns: none;
+  }
+
+  .example__cost {
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 436px;
+  }
+
+  .example__slider {
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+    display: inline-grid;
+  }
 }
