--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -1,4 +1,6 @@
-/* how-it-works */
+.how-it-works__wrapper {
+  margin: 20px;
+}
 
 .how-it-works__title {
   font-family: $second-font;
@@ -6,14 +8,16 @@
   line-height: 40px;
   font-weight: 400;
   color: $contrast-color;
+  margin: 0 0 40px;
 }
 
 .how-it-works__list {
   @include reset-ul;
+  margin: 0 0 40px;
 }
 
 .how-it-works__item {
-  margin: 20px;
+  margin: 20px 0;
   display: flex;
   gap: 20px;
 }
@@ -47,4 +51,27 @@
 .how-it-works__item--time::before {
   background-size: 25px 30px;
   background-image: url("../../icons/stack.svg#icon-time");
+}
+
+@media (min-width: $tablet-width) {
+  .how-it-works {
+    border-bottom: 1px solid $special-border-color;
+  }
+
+  .how-it-works__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .how-it-works__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    gap: 94px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .how-it-works__wrapper {
+    margin: 0 110px;
+  }
 }
