--- a/source/styles/blocks/main-catalog.scss
+++ b/source/styles/blocks/main-catalog.scss
@@ -5,8 +5,21 @@
   line-height: 36px;
   font-weight: 400;
   color: $contrast-color;
+  margin: 27px 20px;
 }
 
 .main-catalog__list {
   @include reset-ul;
+}
+
+@media (min-width: $tablet-width) {
+  .main-catalog__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .main-catalog__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(324px, 1fr));
+  }
 }
