--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,4 +1,54 @@
-/* main-header */
-.main-header {
+.main-header__wrapper {
+  margin: 14px 20px 13px;
+  display: flex;
+  align-items: center;
+}
+
+.main-header__logo {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  width: 100%;
+  align-items: center;
+}
+
+.main-header__toggle {
+  width: 24px;
+  height: 24px;
+  border: none;
+  background-image: url("../../icons/stack.svg#nav-toggle");
+  background-repeat: no-repeat;
   background-color: $basic-color;
+  margin-left: auto;
+}
+
+.main-header__toggle--active {
+  background-image: url("../../icons/stack.svg#nav-toggle-active");
+}
+
+@media (min-width: $tablet-width) {
+  .main-header {
+    display: grid;
+    grid-template-columns: 174px 1fr;
+  }
+
+  .main-header__wrapper {
+    margin: 0;
+    align-items: flex-start;
+  }
+
+  .main-header__toggle {
+    display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-header {
+    grid-template-columns: 50% 50%;
+  }
+
+  .main-header__logo {
+    grid-template-columns: auto auto;
+    justify-content: start;
+    gap: 14px;
+  }
 }
