--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -15,3 +15,20 @@
   display: flex;
   flex-direction: column;
 }
+
+
+@media (min-width: $tablet-width) {
+  .page__header {
+    margin: 25px 34px 25px 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page__header--with-banner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+  }
+}
