--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -15,10 +15,13 @@ $special-secondary-contrast-color: #eaeaea;
 $special-dark-secondary-contrast-color: #444444;
 $special-dark-third-contrast-color: #222222;
 $border-color: #d9d9d9;
+$second-border-color: #cdcdcd;
+$special-border-color: #e6e6e6;
+$third-border-color: #ebebeb;
 $btn-bg-color: #666666;
 $secondary-btn-bg-color: #d3d3d3;
 // Viewports
 
 $tablet-width: 768px;
-$desktop-width: 1200px;
+$desktop-width: 1440px;
 $mobile-width-only: 767px;
