--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -111,6 +111,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+
+    @include max-size;
   }
 
   .example__title {
