--- a/source/styles/blocks/main-catalog.scss
+++ b/source/styles/blocks/main-catalog.scss
@@ -23,3 +23,9 @@
     grid-template-columns: repeat(auto-fill, minmax(324px, 1fr));
   }
 }
+
+@media (min-width: $desktop-width) {
+  .main-catalog__wrapper {
+    @include max-size;
+  }
+}
