--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -20,15 +20,27 @@
 @media (min-width: $tablet-width) {
   .page__header {
     margin: 25px 34px 25px 30px;
+    display: grid;
+    grid-template-columns: 174px 1fr;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .page__header--with-banner {
+  .page__header {
+    @include max-size;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-top: 55px;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     z-index: 10;
+  }
+
+  .page__header--not-index {
+    grid-template-columns: 174px 1fr;
+    width: 100%;
+    position: static;
   }
 }
