--- a/source/styles/blocks/promotions.scss
+++ b/source/styles/blocks/promotions.scss
@@ -52,3 +52,15 @@
     max-width: 752px;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .promotions__title {
+    @include max-size;
+    font-size: 40px;
+    line-height: 40px;
+  }
+
+  .promotions__wrapper {
+    @include max-size;
+  }
+}
