--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -6,6 +6,7 @@ $second-font: "Oswald", "Arial", sans-serif;
 // Colors
 
 $basic-color: #ffffff;
+$basic-color-pressed: rgba(255, 255, 255, 0.3);
 $contrast-color: #000000;
 $special-contrast-color: #111111;
 $basic-bg-color: #68b738;
