--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -5,6 +5,7 @@
 .contacts__wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: center;
 }
 
 .contacts__text {
@@ -30,9 +31,13 @@
   margin: 0;
 }
 
-.contacts__map {
-  width: 100%;
+.contacts__yandex-map {
+  border: none;
   display: block;
+}
+
+.contacts__map {
+  display: none;
 }
 
 @media (min-width: $tablet-width) {
@@ -53,14 +58,24 @@
 
 @media (min-width: $desktop-width) {
   .contacts {
-    position: relative;
+    display: grid;
+    grid-template-columns: 110px 565px 1fr;
+    grid-template-rows: 95px 1fr 106px;
   }
 
   .contacts__wrapper {
-    position: absolute;
-    top: 95px;
-    left: 110px;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    margin: 0;
     background-color: #ffffff;
     max-width: 565px;
+    z-index: 2;
+  }
+
+  .contacts__yandex-map {
+    grid-row: 1 / -1;
+    grid-column: 1 / 4;
+    display: grid;
+    z-index: 1;
   }
 }
