--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -58,20 +58,61 @@
     border-bottom: 1px solid $special-border-color;
   }
 
+  .how-it-works__wrapper {
+    margin: 30px;
+  }
+
   .how-it-works__title {
     font-size: 60px;
     line-height: 60px;
   }
 
   .how-it-works__list {
+    counter-reset: how-it-works__item 0;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-    gap: 94px;
+    grid-template-columns: 1fr 1fr;
+    gap: 0 60px;
+  }
+
+  .how-it-works__item {
+    counter-increment: how-it-works__item 1;
+    position: relative;
+    min-height: 280px;
+    display: block;
+    padding: 10px 80px 30px 0;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .how-it-works__item::before {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 31px;
+  }
+
+  .how-it-works__item::after {
+    content: counter(how-it-works__item);
+    color: #f2f2f2;
+    z-index: -1;
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 280px;
+    line-height: 280px;
+    position: absolute;
+    top: 0;
+    right: 74px;
   }
 }
 
 @media (min-width: $desktop-width) {
+  .how-it-works {
+    border-bottom: none;
+  }
+
   .how-it-works__wrapper {
     @include max-size;
+  }
+
+  .how-it-works__list {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
