--- a/source/styles/blocks/indicator.scss
+++ b/source/styles/blocks/indicator.scss
@@ -1,9 +1,3 @@
-.indicator {
-  border: 1px solid $second-border-color;
-  border-radius: 3px;
-  position: relative;
-}
-
 .indicator__value {
   font-family: $second-font;
   font-size: 24px;
@@ -13,6 +7,9 @@
   text-transform: uppercase;
   text-align: center;
   margin: 14px auto 18px;
+  padding: 14px;
+  border: 1px solid $second-border-color;
+  border-radius: 3px;
 }
 
 .indicator__name {
@@ -21,9 +18,21 @@
   font-size: 12px;
   line-height: 12px;
   text-align: center;
-  width: 87px;
-  position: absolute;
-  z-index: 10;
-  bottom: -24px;
-  left: calc(50% - 43px);
+  padding: 0 10px;
+  margin-top: -27px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 95px;
+}
+
+@media (min-width: $tablet-width) {
+  .indicator__name {
+    background-color: $basic-color;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .indicator__name {
+    background-color: $special-secondary-contrast-color;
+  }
 }
