--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -1,7 +1,30 @@
 .logo {
   text-decoration: none;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 .logo__text {
-  margin: 0 auto;
+  margin-left: calc(50% - 68px);
+  align-self: center;
+}
+
+@media (min-width: $tablet-width) {
+  .logo__text {
+    margin-left: calc(50% - 59px);
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .logo__text {
+    width: 118px;
+    height: 21px;
+    margin-left: 0;
+  }
 }
