--- a/source/styles/blocks/main-banner.scss
+++ b/source/styles/blocks/main-banner.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 100%, auto, 100%;
+  min-height: 480px;
 }
 
 .main-banner__wrapper {
@@ -34,6 +35,10 @@
   margin: 0;
 }
 
+.main-banner__img-wrapper {
+  margin-top: 30px;
+}
+
 .main-banner__img {
   display: block;
   margin: 25px auto;
@@ -44,7 +49,7 @@
   padding: 10px;
   display: block;
   position: absolute;
-  bottom: -47px;
+  bottom: -342px;
   transform: translateX(-50%);
   left: 50%;
   width: 100%;
@@ -78,14 +83,12 @@
     margin-top: 40px;
     margin-bottom: 50px;
   }
-}
 
-@media (min-width: $tablet-width) {
   .main-banner__button {
     width: auto;
     padding: 14px 26px;
     margin-left: 90px;
-    bottom: 526px;
+    bottom: -130px;
     left: auto;
     transform: none;
     font-size: 20px;
@@ -93,29 +96,41 @@
   }
 }
 
+
 @media (min-width: $desktop-width) {
   .main-banner {
-    background-image: linear-gradient(to left, rgba(104, 183, 56, 0.85) 50%, #ffffff 50%), image-set("../images/banner-background-cat-desktop@1x.jpg" 1x, "../images/banner-background-cat-desktop@2x.jpg" 2x), linear-gradient(#4f4e54, #434248);
-    background-repeat: no-repeat;
-    background-position: top, top right, top;
-    background-size: 100%, contain, 100%;
-    min-height: 694px;
-    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 
   .main-banner__wrapper {
-    padding-top: 200px;
     margin: 0;
   }
 
-  .main-banner__img {
-    position: absolute;
-    top: 143px;
-    right: 331px;
+  .main-banner__title {
+    margin-left: 79px;
+    padding-top: 80px;
+    padding-bottom: 0;
+  }
+
+  .main-banner__text {
+    margin-left: 80px;
+    margin-bottom: 51px;
   }
 
   .main-banner__button {
     position: static;
-    display: inline-block;
+    width: fit-content;
+    margin-left: 80px;
+    padding: 15px 28px;
+  }
+
+  .main-banner__img-wrapper {
+    margin-top: 0;
+  }
+
+  .main-banner__img {
+    margin-left: -163px;
+    margin-top: 0;
   }
 }
