--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,3 +1,4 @@
+
 .main-nav__list {
   @include reset-ul;
   text-align: center;
@@ -19,14 +20,60 @@
   text-decoration: none;
   display: block;
   padding-top: 22px;
-  padding-bottom: 24px;
+  padding-bottom: 23px;
+}
+
+@media (max-width: $mobile-width-only) {
+  .main-nav {
+    position: relative;
+  }
+
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+
+  .main-nav--active .main-nav__list {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 2;
+  }
+
+  .main-nav__toggle {
+    width: 24px;
+    height: 24px;
+    border: none;
+    background-repeat: no-repeat;
+    background-color: $basic-color;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--active .main-nav__toggle {
+    background-image: url("../../icons/stack.svg#nav-toggle-active");
+    top: -45px;
+  }
+
+  .main-nav--closed .main-nav__toggle {
+    background-image: url("../../icons/stack.svg#nav-toggle");
+  }
 }
 
 @media (min-width: $tablet-width) {
+  .main-nav__toggle {
+    display: none;
+  }
+
   .main-nav__list {
     display: flex;
     flex-wrap: wrap;
-    gap: 33px;
+    gap: 24px;
     justify-content: flex-end;
   }
 
@@ -38,7 +85,30 @@
   }
 
   .main-nav__link {
-    padding: 12px 0;
+    padding: 15px 5px;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  .main-nav__link--active {
+    position: relative;
+
+    &::after {
+      content: "";
+      background-color: $basic-bg-color;
+      height: 2px;
+      display: block;
+      position: absolute;
+      bottom: 6px;
+      left: 5px;
+      right: 5px;
+    }
   }
 }
 
@@ -52,7 +122,19 @@
     color: $basic-color;
   }
 
+  .main-nav__link--active {
+    &::after {
+      background-color: $basic-bg-color;
+    }
+  }
+
+  .main-nav__link--active.main-nav__link--light {
+    &::after {
+      background-color: $basic-color;
+    }
+  }
+
   .main-nav__list {
-    gap: 5px 33px;
+    gap: 5px 34px;
   }
 }
