--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -27,7 +27,11 @@
   margin: 26px 20px 26px 0;
 }
 
-.contacts__address p {
+.contacts__street {
+  margin: 0;
+}
+
+.contacts__city {
   margin: 0;
 }
 
@@ -35,6 +39,7 @@
   border: none;
   display: block;
   width: 100%;
+  height: 362px;
 }
 
 .contacts__map {
@@ -43,17 +48,22 @@
 
 @media (min-width: $tablet-width) {
   .contacts__wrapper {
-    margin: 0 70px 60px;
+    margin: 61px 70px 60px;
   }
 
   .contacts__text {
     font-size: 20px;
     line-height: 26px;
+    margin: 0;
   }
 
   .contacts__address {
     text-align: right;
     font-size: 16px;
+  }
+
+  .contacts__city {
+    margin-top: 20px;
   }
 }
 
@@ -71,6 +81,7 @@
     background-color: #ffffff;
     max-width: 565px;
     z-index: 2;
+    padding: 0 80px;
   }
 
   .contacts__yandex-map {
