--- a/source/styles/blocks/gift-banner.scss
+++ b/source/styles/blocks/gift-banner.scss
@@ -24,4 +24,37 @@
   font-weight: 400;
   color: $basic-color;
   text-align: center;
+  margin: 0 15px;
+}
+
+@media (min-width: $tablet-width) {
+  .gift-banner {
+    display: flex;
+    min-height: 200px;
+    align-items: center;
+
+    &::before {
+      width: 80px;
+      height: 82px;
+      margin: 13px auto 13px 0;
+    }
+  }
+
+  .gift-banner__title {
+    text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .gift-banner {
+    display: block;
+
+    &::before {
+      margin: 13px auto;
+    }
+  }
+
+  .gift-banner__title {
+    text-align: center;
+  }
 }
