--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -13,7 +13,7 @@
 .main-footer__logo {
   display: block;
   text-align: center;
-  padding: 20px;
+  padding: 18px 20px;
   border-bottom: 1px solid #d9d9d9;
 }
 
