--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -8,12 +8,23 @@
   display: grid;
   grid-template-columns: auto 1fr;
   width: 100%;
+
+  .logo__text {
+    margin-left: calc(50% - 68px);
+    align-self: center;
+  }
 }
 
 @media (min-width: $tablet-width) {
   .main-header__wrapper {
     margin: 0;
     align-items: flex-start;
+  }
+
+  .main-header__logo {
+    .logo__text {
+      margin-left: calc(50% - 59px);
+    }
   }
 }
 
