--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -15,6 +15,10 @@
   border-top: 1px solid $border-color;
 }
 
+.main-nav__item:nth-last-child(1) {
+  border-bottom: 1px solid $border-color;
+}
+
 .main-nav__link {
   color: $contrast-color;
   text-decoration: none;
@@ -73,7 +77,7 @@
   .main-nav__list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 23px;
     justify-content: flex-end;
   }
 
@@ -82,6 +86,10 @@
     line-height: 24px;
     border-top: none;
     background: none;
+  }
+
+  .main-nav__item:nth-last-child(1) {
+    border-bottom: none;
   }
 
   .main-nav__link {
@@ -135,6 +143,6 @@
   }
 
   .main-nav__list {
-    gap: 5px 34px;
+    gap: 5px 22px;
   }
 }
