--- a/source/styles/blocks/subscribe-form.scss
+++ b/source/styles/blocks/subscribe-form.scss
@@ -6,6 +6,17 @@
   font-weight: 400;
   color: $special-dark-secondary-contrast-color;
   text-transform: uppercase;
+  padding: 11px;
+  width: 100%;
+  border: 1px solid $second-border-color;
+}
+
+.subscribe-form__button {
+  width: 100%;
+  margin-top: 16px;
+  padding: 15px;
+  font-size: 20px;
+  line-height: 26px;
 }
 
 @media (min-width: $tablet-width) {
