--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -48,7 +48,7 @@
 
 @media (min-width: $tablet-width) {
   .contacts__wrapper {
-    margin: 61px 70px 60px;
+    padding: 60px 70px;
   }
 
   .contacts__text {
