--- a/source/styles/blocks/promotions.scss
+++ b/source/styles/blocks/promotions.scss
@@ -55,7 +55,7 @@
   .promotions__form {
     display: grid;
     grid-template-columns: 1fr min-content;
-    margin: 24px 68px 80px;
+    margin: 24px auto 80px;
     max-width: 752px;
   }
 }
