--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -15,7 +15,7 @@
   font-weight: 400;
   color: $special-contrast-color;
   text-transform: uppercase;
-  margin: 26px 0 26px 20px;
+  margin: 27px 0 26px 20px;
 }
 
 .contacts__address {
@@ -48,7 +48,8 @@
 
 @media (min-width: $tablet-width) {
   .contacts__wrapper {
-    padding: 60px 70px;
+    padding: 33px 70px;
+    justify-items: stretch;
   }
 
   .contacts__text {
@@ -60,10 +61,15 @@
   .contacts__address {
     text-align: right;
     font-size: 16px;
+    margin: 26px 0;
   }
 
   .contacts__city {
     margin-top: 20px;
+  }
+
+  .contacts__yandex-map {
+    height: 400px;
   }
 }
 
@@ -71,7 +77,7 @@
   .contacts {
     display: grid;
     grid-template-columns: 110px 565px 1fr;
-    grid-template-rows: 95px 1fr 106px;
+    grid-template-rows: 95px 1fr 105px;
   }
 
   .contacts__wrapper {
@@ -82,6 +88,11 @@
     max-width: 565px;
     z-index: 2;
     padding: 0 80px;
+    gap: 91px;
+  }
+
+  .contacts__address {
+    text-align: left;
   }
 
   .contacts__yandex-map {
