--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -17,13 +17,17 @@
   padding-top: 25px;
 }
 
+.example__text {
+  margin: 39px 0 5px;
+}
+
 .example__data-list {
   @include reset-ul;
   display: grid;
   grid-template-columns: repeat(auto-fit, 124px);
   justify-content: center;
   gap: 32px;
-  margin: 20px 0 34px;
+  margin: 5px 0;
 }
 
 .example__cost {
@@ -34,6 +38,7 @@
   color: $contrast-color;
   text-transform: uppercase;
   text-align: center;
+  margin: 0;
 }
 
 .example__slider {
@@ -62,14 +67,16 @@
   .example__title {
     font-size: 60px;
     line-height: 60px;
+    padding-top: 13px;
   }
 
   .example__wrapper {
     padding-bottom: 10px;
+    margin: 30px;
   }
 
   .example__text {
-    margin: 60px 0 55px;
+    margin: 60px 0 35px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -81,41 +88,57 @@
 
   .example__data-list {
     max-width: 370px;
+    justify-content: space-between;
+    grid-template-columns: repeat(auto-fit, 162px);
+    gap: 43px;
+  }
+
+  .example__data-item {
+    min-width: 162px;
   }
 
   .example__cost {
     font-size: 20px;
+    line-height: 20px;
   }
 
   .example__cost-name {
     display: block;
     text-align: right;
+    padding-top: 32px;
   }
 
   .example__cost-value {
     display: block;
     text-align: right;
+    padding-top: 9px;
   }
 
   .example__slider {
     width: 560px;
     height: 512px;
-    margin-top: 99px;
-    margin-bottom: 55px;
+    margin-top: 77px;
+    margin-bottom: 53px;
   }
 }
 
 @media (min-width: $desktop-width) {
+  .example {
+    padding-bottom: 20px;
+  }
+
   .example__wrapper {
     @include max-size;
     display: flex;
     align-items: end;
     margin-bottom: 0;
     padding-bottom: 0;
+    margin-top: 10px;
   }
 
   .example::before {
     bottom: 0;
+    height: 460px;
   }
 
   .example__wrapper-text {
@@ -129,8 +152,8 @@
   }
 
   .example__text {
-    max-width: 436px;
-    margin: 60px 0 69px;
+    max-width: 433px;
+    margin: 60px 0 55px;
   }
 
   .example__data-wrapper {
@@ -151,14 +174,17 @@
 
   .example__cost-name {
     text-align: left;
+    padding-top: 35px;
   }
 
   .example__cost-value {
     text-align: left;
+    padding-top: 35px;
+    padding-left: 21px;
   }
 
   .example__slider {
-    margin-bottom: 77px;
+    margin-bottom: 65px;
     margin-right: 0;
     margin-top: 0;
   }
