--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -1,5 +1,5 @@
 .how-it-works__wrapper {
-  margin: 20px;
+  margin: 20px 20px 49px;
 }
 
 .how-it-works__title {
@@ -59,12 +59,13 @@
   }
 
   .how-it-works__wrapper {
-    margin: 30px;
+    margin: 0 30px;
   }
 
   .how-it-works__title {
     font-size: 60px;
     line-height: 60px;
+    margin: 45px 0 40px;
   }
 
   .how-it-works__list {
@@ -72,6 +73,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0 60px;
+    margin: 0;
   }
 
   .how-it-works__item {
@@ -82,6 +84,7 @@
     padding: 10px 80px 30px 0;
     font-size: 16px;
     line-height: 24px;
+    margin: 19px 0;
   }
 
   .how-it-works__item::before {
@@ -98,8 +101,8 @@
     font-size: 280px;
     line-height: 280px;
     position: absolute;
-    top: 0;
-    right: 74px;
+    top: -29px;
+    left: 115px;
   }
 }
 
@@ -112,7 +115,16 @@
     @include max-size;
   }
 
+  .how-it-works__title {
+    margin: 40px 0;
+  }
+
   .how-it-works__list {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 0 80px;
+  }
+
+  .how-it-works__item {
+    padding: 12px 1px 30px 0;
   }
 }
