--- a/source/styles/blocks/main-banner.scss
+++ b/source/styles/blocks/main-banner.scss
@@ -9,7 +9,6 @@
 }
 
 .main-banner__wrapper {
-  position: relative;
   margin: 0 20px;
 }
 
@@ -35,10 +34,6 @@
   margin: 0;
 }
 
-.main-banner__img-wrapper {
-  margin-top: 30px;
-}
-
 .main-banner__img {
   display: block;
   margin: 25px auto;
@@ -47,12 +42,8 @@
 .main-banner__button {
   text-align: center;
   padding: 10px;
+  margin: -19px 0 0;
   display: block;
-  position: absolute;
-  bottom: -342px;
-  transform: translateX(-50%);
-  left: 50%;
-  width: 100%;
 }
 
 @media (min-width: $tablet-width) {
@@ -62,6 +53,8 @@
 
   .main-banner__wrapper {
     margin: 0 30px;
+    padding: 10px 30px 510px;
+    position: relative;
   }
 
   .main-banner__title {
@@ -70,7 +63,7 @@
     line-height: 60px;
     text-align: left;
     max-width: 416px;
-    margin-left: 90px;
+    margin-left: 60px;
   }
 
   .main-banner__text {
@@ -79,17 +72,23 @@
     line-height: 20px;
     text-align: left;
     max-width: 416px;
-    margin-left: 90px;
-    margin-top: 40px;
+    margin-left: 60px;
+    margin-top: 17px;
     margin-bottom: 50px;
   }
 
+  .main-banner__img {
+    z-index: -1;
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+  }
+
   .main-banner__button {
-    width: auto;
+    width: fit-content;
     padding: 14px 26px;
-    margin-left: 90px;
-    bottom: -130px;
-    left: auto;
+    margin-left: 60px;
+    margin-top: 0;
     transform: none;
     font-size: 20px;
     line-height: 26px;
@@ -98,39 +97,29 @@
 
 
 @media (min-width: $desktop-width) {
-  .main-banner {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
   .main-banner__wrapper {
-    margin: 0;
+    @include max-size;
+    padding: 10px 30px;
   }
 
   .main-banner__title {
-    margin-left: 79px;
-    padding-top: 80px;
-    padding-bottom: 0;
+    margin-left: 49px;
+    padding-top: 71px;
   }
 
   .main-banner__text {
-    margin-left: 80px;
-    margin-bottom: 51px;
+    margin-bottom: 50px;
+    margin-left: 50px;
   }
 
   .main-banner__button {
-    position: static;
     width: fit-content;
-    margin-left: 80px;
+    margin-left: 50px;
     padding: 15px 28px;
   }
 
-  .main-banner__img-wrapper {
-    margin-top: 0;
-  }
-
   .main-banner__img {
-    margin-left: -163px;
-    margin-top: 0;
+    top: -26px;
+    left: 448px;
   }
 }
