--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -32,11 +32,12 @@
     position: relative;
   }
 
-  .main-nav--closed .main-nav__list {
+  .main-nav .main-nav__list {
     display: none;
   }
 
-  .main-nav--active .main-nav__list {
+  .main-nav .main-nav__list--opened {
+    display: block;
     position: absolute;
     top: 0;
     right: 0;
@@ -53,19 +54,20 @@
     position: absolute;
     right: 20px;
     bottom: 20px;
+    background-image: url("../../icons/stack.svg#nav-toggle");
+  }
+
+  .main-nav__toggle--active {
+    background-image: url("../../icons/stack.svg#nav-toggle-active");
+    top: -45px;
   }
 
   .main-nav--nojs .main-nav__toggle {
     display: none;
   }
 
-  .main-nav--active .main-nav__toggle {
-    background-image: url("../../icons/stack.svg#nav-toggle-active");
-    top: -45px;
-  }
-
-  .main-nav--closed .main-nav__toggle {
-    background-image: url("../../icons/stack.svg#nav-toggle");
+  .main-nav--nojs .main-nav__list {
+    display: block;
   }
 }
 
