Корректирует по ПП

--- a/source/styles/blocks/catalog-card.scss
+++ b/source/styles/blocks/catalog-card.scss
@@ -28,7 +28,6 @@
 
   .catalog-card__button {
     margin-top: 21px;
-    margin-bottom: 3px;
   }
 }
 
@@ -165,7 +164,7 @@
     }
 
     .catalog-card__title {
-      margin: 12px auto 0;
+      margin: 0 auto;
     }
 
     .catalog-card__properties {
