--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -35,15 +35,33 @@
   margin: 0;
 }
 
-.contacts__yandex-map {
+.contacts__map-wrapper {
   border: none;
   display: block;
   width: 100%;
   height: 362px;
 }
 
+.contacts__yandex-map {
+  border: none;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .contacts__map {
   display: none;
+}
+
+.contacts__map-wrapper--nojs {
+  .contacts__yandex-map {
+    display: none;
+  }
+
+  .contacts__map {
+    display: block;
+    width: 100%;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -68,7 +86,7 @@
     margin-top: 20px;
   }
 
-  .contacts__yandex-map {
+  .contacts__map-wrapper {
     height: 400px;
   }
 }
@@ -76,7 +94,7 @@
 @media (min-width: $desktop-width) {
   .contacts {
     display: grid;
-    grid-template-columns: 110px 565px 1fr;
+    grid-template-columns: 1fr 1220px 1fr;
     grid-template-rows: 95px 1fr 105px;
   }
 
@@ -95,10 +113,9 @@
     text-align: left;
   }
 
-  .contacts__yandex-map {
+  .contacts__map-wrapper {
     grid-row: 1 / -1;
     grid-column: 1 / 4;
-    display: grid;
     z-index: 1;
   }
 }
