--- a/source/styles/blocks/second-catalog.scss
+++ b/source/styles/blocks/second-catalog.scss
@@ -5,6 +5,7 @@
   font-weight: 400;
   color: $contrast-color;
   margin: 24px 34px 36px 20px;
+  padding-right: 40px;
   position: relative;
   box-shadow: -40px 0 $basic-color;
   background-color: $basic-color;
@@ -41,14 +42,18 @@
   .second-catalog__title {
     font-size: 32px;
     line-height: 32px;
-    margin: 56px 0 36px 30px;
+    margin: 56px 0 36px;
     padding-left: 40px;
     padding-right: 40px;
     box-shadow: none;
   }
 
   .second-catalog__list {
-    margin: 80px 0;
+    margin: 80px 0 69px;
+  }
+
+  .second-catalog__banner {
+    margin: 54px 0 38px;
   }
 }
 
@@ -60,7 +65,7 @@
   .second-catalog__title {
     font-size: 40px;
     line-height: 40px;
-    margin: 56px 0 36px -40px;
+    margin: 70px 0 80px -40px;
   }
 
   .second-catalog__wrapper {
