--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -19,6 +19,8 @@ $border-color: #d9d9d9;
 $second-border-color: #cdcdcd;
 $special-border-color: #e6e6e6;
 $third-border-color: #ebebeb;
+$input-border-color: #e7e7e7;
+$input-error-border-color: #ff8282;
 $btn-bg-color: #666666;
 $secondary-btn-bg-color: #d3d3d3;
 // Viewports
