--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -15,10 +15,6 @@
   border-top: 1px solid $border-color;
 }
 
-.main-nav__item:nth-last-child(1) {
-  border-bottom: 1px solid $border-color;
-}
-
 .main-nav__link {
   color: $contrast-color;
   text-decoration: none;
@@ -126,6 +122,7 @@
   .main-nav__link {
     font-size: 20px;
     line-height: 30px;
+    padding: 15px 0;
   }
 
   .main-nav__link--light {
@@ -145,6 +142,6 @@
   }
 
   .main-nav__list {
-    gap: 5px 22px;
+    gap: 5px 35px;
   }
 }
