--- a/source/styles/blocks/second-catalog-card.scss
+++ b/source/styles/blocks/second-catalog-card.scss
@@ -40,7 +40,7 @@
   .second-catalog-card {
     border-left: 1px solid $second-border-color;
     border-right: 1px solid $second-border-color;
-    padding: 26px 38px;
+    padding: 27px 38px;
     display: flex;
     flex-wrap: wrap;
 
@@ -63,6 +63,14 @@
     justify-content: end;
   }
 
+  .second-catalog-card__offer-name {
+    padding-right: 10px;
+  }
+
+  .second-catalog-card__offer-cost {
+    padding-right: 2px;
+  }
+
   .second-catalog-card__button {
     width: 100%;
     margin-top: 24px;
@@ -79,15 +87,16 @@
 @media (min-width: $desktop-width) {
   .second-catalog-card {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 244px;
     align-items: center;
     border-left: none;
     border-right: none;
-    padding: 15px 0;
+    padding: 15px 0 16px;
   }
 
   .second-catalog-card__offers {
     width: 100%;
+    margin-top: 5px;
   }
 
   .second-catalog-card__offer {
@@ -96,6 +105,7 @@
 
   .second-catalog-card__offer-cost {
     margin-right: 40px;
+    min-width: 42px;
   }
 
   .second-catalog-card__button {
