--- a/source/styles/blocks/subscribe-form.scss
+++ b/source/styles/blocks/subscribe-form.scss
@@ -6,9 +6,21 @@
   font-weight: 400;
   color: $special-dark-secondary-contrast-color;
   text-transform: uppercase;
-  padding: 11px;
+  padding: 12px;
   width: 100%;
-  border: 1px solid $second-border-color;
+  border: 1px solid $input-border-color;
+
+  &:hover {
+    border: 1px solid $second-border-color;
+  }
+
+  &:focus {
+    border: 1px solid $special-dark-secondary-contrast-color;
+  }
+}
+
+.subscribe-form__email--error {
+  border: 1px solid $input-error-border-color;
 }
 
 .subscribe-form__button {
