--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -7,13 +7,13 @@
 }
 
 .main-footer__wrapper {
-  margin: 20px;
+  margin: 20px 20px 40px;
 }
 
 .main-footer__logo {
   display: block;
   text-align: center;
-  padding: 18px 20px;
+  padding: 20px 20px 15px;
   border-bottom: 1px solid #d9d9d9;
 }
 
