--- a/source/styles/blocks/gift-banner.scss
+++ b/source/styles/blocks/gift-banner.scss
@@ -1,5 +1,5 @@
 .gift-banner {
-  background-image: linear-gradient(rgba(104, 183, 56, 0.85)), image-set("../images/gift-banner-cat-mobile@1x.webp" 1x, "../images/gift-banner-cat-mobile@2x.webp" 2x, "../images/gift-banner-cat-mobile@1x.jpg" 1x, "../images/gift-banner-cat-mobile@2x.jpg" 2x), linear-gradient(#4f4e54, #434248);
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85)), image-set("../images/gift-banner-cat-mobile@1x.webp" type("image/webp") 1x, "../images/gift-banner-cat-mobile@2x.webp" type("image/webp") 2x, "../images/gift-banner-cat-mobile@1x.jpg" type("image/jpeg") 1x, "../images/gift-banner-cat-mobile@2x.jpg" type("image/jpeg") 2x), linear-gradient(#4f4e54, #434248);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%, cover, 100%;
@@ -29,7 +29,7 @@
 
 @media (min-width: $tablet-width) {
   .gift-banner {
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85)), image-set("../images/gift-banner-cat-tablet@1x.webp" 1x, "../images/gift-banner-cat-tablet@2x.webp" 2x, "../images/gift-banner-cat-tablet@1x.jpg" 1x, "../images/gift-banner-cat-tablet@2x.jpg" 2x), linear-gradient(#4f4e54, #434248);
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85)), image-set("../images/gift-banner-cat-tablet@1x.webp" type("image/webp") 1x, "../images/gift-banner-cat-tablet@2x.webp" type("image/webp") 2x, "../images/gift-banner-cat-tablet@1x.jpg" type("image/jpeg") 1x, "../images/gift-banner-cat-tablet@2x.jpg" type("image/jpeg") 2x), linear-gradient(#4f4e54, #434248);
     display: flex;
     min-height: 200px;
     align-items: center;
